--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,16 @@ body {
 }
 
 
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+.light-mode {
+    background-color: white;
+    color: black;
+}
+
 /* Main Page Layout */
 
 #main-content {
